--- a/Gopkg.toml
+++ b/Gopkg.toml
@@ -63,11 +63,11 @@ required = [
 
 [[constraint]]
   name = "k8s.io/api"
-  branch = "release-1.12"
+  version = "kubernetes-1.12.3"
 
 [[constraint]]
   name = "k8s.io/apimachinery"
-  branch = "release-1.12"
+  version = "kubernetes-1.12.3"
 
 [[constraint]]
   name = "k8s.io/client-go"
@@ -75,11 +75,11 @@ required = [
 
 [[constraint]]
   name = "k8s.io/kubernetes"
-  branch = "release-1.12"
+  version = "kubernetes-1.12.3"
 
 [[constraint]]
   name = "k8s.io/code-generator"
-  branch = "release-1.12"
+  version = "kubernetes-1.12.3"
 
 [[constraint]]
   name = "github.com/slok/kubewebhook"
